@@ -1,0 +1,45 @@
+#!/bin/sh
+# © 2011 Cyril Brulebois <kibi@debian.org>
+set -e
+
+# List broken symlinks:
+broken_symlinks=$(find -follow -type l)
+
+# Symlinks vs. directories:
+dirs_vs_symlinks='
+src/gallium/tests/graw/fragment-shader
+src/gallium/tests/graw/vertex-shader
+'
+
+# Modified binaries:
+binaries='
+src/gallium/state_trackers/d3d1x/progs/bin/d3d10tri.exe
+src/gallium/state_trackers/d3d1x/progs/bin/d3d11gears.exe
+src/gallium/state_trackers/d3d1x/progs/bin/d3d11spikysphere.exe
+src/gallium/state_trackers/d3d1x/progs/bin/d3d11tex.exe
+src/gallium/state_trackers/d3d1x/progs/bin/d3d11tri.exe
+src/gallium/state_trackers/python/tests/regress/fragment-shader/frag-abs.png
+docs/gears.png
+'
+
+case $1 in
+  "")   clean=0; echo "I: No parameter given, listing only (-f to remove).";;
+  "-f") clean=1; echo "I: Removing files.";;
+  *)    clean=0; echo "I: Unknown parameter given, listing only (-f to remove).";;
+esac
+
+# Readibility:
+echo
+
+for x in $broken_symlinks $dirs_vs_symlinks $binaries; do
+  # Do not fail if the file went away already, only warn:
+  if [ -e $x -o -L $x ]; then
+    if [ $clean = 1 ]; then
+      git rm $x
+    else
+      echo "I: Would remove $x"
+    fi
+  else
+   echo "W: Unable to remove non-existing: $x"
+  fi
+done
